# one-decoder

./: .gitignore  Cargo.toml  README.md  angular.json  eslint.config.js  ngsw-config.json  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
pkg/: README.md  hidden_watermark_wasm.d.ts  hidden_watermark_wasm.js  hidden_watermark_wasm_bg.js  hidden_watermark_wasm_bg.wasm  hidden_watermark_wasm_bg.wasm.d.ts  package.json  whisperer_wasm.d.ts  whisperer_wasm.js  whisperer_wasm_bg.js  whisperer_wasm_bg.wasm  whisperer_wasm_bg.wasm.d.ts
public/: manifest.webmanifest
src/: config.rs  crypt.rs  hash.rs  index.html  lib.rs  styles.scss
src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
src/app/about/: about.html  about.scss  about.spec.ts  about.ts
src/app/decoder/: decoder.html  decoder.scss  decoder.spec.ts  decoder.ts  decoding.spec.ts  decoding.ts  decodingService.spec.ts  decodingService.ts
src/app/encoder/: encoder.html  encoder.scss  (+2 more)
src/common/: decodingService.ts  utils-pipe.ts  utils.pipe.spec.ts
src/decoders/: decoder.ts  decorators.ts  enabled.ts  errors.ts  types.ts
src/plugins/: _template.ts  enabled.ts
text_watermark_web/: Cargo.toml  README.md
text_watermark_web/pkg/: wasm_text_watermark_bg.wasm
text_watermark_web/src/: lib.rs
wasm_text_watermark/: README.md  text_hidden_watermark.html
wasm_text_watermark/pkg/: package.json  wasm_text_watermark.d.ts  wasm_text_watermark.js  wasm_text_watermark_bg.wasm.d.ts
(+104 files in other folders)
