[package]
name = "whisperer-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
blake3 = "1"
zstd = "0.13"
zstd-sys = { version = "2.0" , default-features = false }
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s" # optimize for small code size.
